--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,5 +4,5 @@
     <a class="nav-link active" href="{{site.baseurl}}/">Inicio</a>
 </li> -->
 <li class="nav-item">
-    <a class="nav-link" target="_blank" href="https://github.com/CimarronIO/"><i class="fab fa-github fa-2x"></i></a>
+    <a class="nav-link" target="_blank" href="https://github.com/Cimarron-IO/"><i class="fab fa-github fa-2x"></i></a>
 </li>
