--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -5,4 +5,5 @@
 </li> -->
 <li class="nav-item">
     <a class="nav-link" target="_blank" href="https://github.com/Cimarron-IO/"><i class="fab fa-github fa-2x"></i></a>
+    <a class="nav-link" target="_blank" href="https://twitter.com/ChekosWH/"><i class="fab fa-twitter fa-2x"></i></a>
 </li>
