--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
     <footer class="footer pt-5 pb-5 text-center">
       <div class="container">
         <p>
-        Made with <i class="fa fa-heart text-indigo"></i> by <span class="credits"><a target="_blank" href="https://twitter.com/tacosdedatos">@tacosdedatos</a> | Special thanks to Codeando México who open-sourced their <b>Awesome Civic Tech</b> wesbite.</span>.
+        Made with <i class="fa fa-heart text-indigo"></i> by <span class="credits"><a target="_blank" href="https://twitter.com/ChekosWH">@ChekosWH</a> | Special thanks to Codeando México who open-sourced their <a href="codeandomexico.github.io/awesome-civic-tech"><b>Awesome Civic Tech</b></a> wesbite.</span>.
         </p>
         <p class="m-0 text-center text-dark">&copy; 2020 Cimarrón IO</p>
       </div>
