--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,50 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">    
+    <title>{{page.title}} | {{site.name}}</title>
+    
+    {% seo %}
+    
+    <link rel="shortcut icon" type="image/x-icon" href="{{site.baseurl}}/{{site.favicon}}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/bootstrap.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/theme.css">
-    <link rel="shortcut icon" type="image/x-icon" href="{{site.baseurl}}/assets/images/logo.png">
-
-    <meta name="description" content="">
-    <meta name="author" content="">
-  
-    <title>Cimarrón IO</title>
-  </head>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    
+    {% include tracking-header.html %}
+    
+</head>
   <body>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-    <a class="navbar-brand font-weight-bolder mr-3" href="{{site.baseurl}}/"><img src="{{site.baseurl}}/{{site.logo}}" height="50"> &nbsp;<strong>Cimarrón IO</strong></a>
-    <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarsDefault">
-      <ul class="navbar-nav ml-auto align-items-center">
-        {% include menu-header.html %}
-      </ul>
-    </div>
-    </nav>
-
+      <a class="navbar-brand font-weight-bolder mr-3" href="{{site.baseurl}}/"><img src="{{site.baseurl}}/{{site.logo}}" height="50"> &nbsp;<strong>Eventos globales</strong></a>
+      <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarsDefault">        
+        <ul class="navbar-nav mr-auto align-items-center">            
+              {% include search-lunr.html %}    		
+        </ul>
+        <ul class="navbar-nav ml-auto align-items-center">
+          {% include menu-header.html %}
+        </ul>
+      </div>
+      </nav>
+      
+      <div id="lunrsearchresults">
+          <ul class="mb-0"></ul>
+      </div>
+      
+      <main role="main">    
     {{ content }}
 
     <!-- Footer -->
-    <footer class="footer pt-5 pb-5 text-center">
-      <div class="container">
-        <p>
-        Made with <i class="fa fa-heart text-indigo"></i> by <span class="credits"><a target="_blank" href="https://twitter.com/ChekosWH">@ChekosWH</a> | Special thanks to Codeando México who open-sourced their <a href="codeandomexico.github.io/awesome-civic-tech"><b>Awesome Civic Tech</b></a> wesbite.</span>.
-        </p>
-        <p class="m-0 text-center text-dark">&copy; 2020 Cimarrón IO</p>
-      </div>
-      <!-- /.container -->
-    </footer>
+    <footer class="footer pt-5 pb-5 text-center">        
+      <div class="container">        
+            <div class="socials-media">    
+              <ul class="list-unstyled">
+                {% include footer-social.html %}
+              </ul>    
+            </div>
+            {% include footer-copyright.html %}
+          </div>
+      </footer>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="{{site.baseurl}}/assets/js/theme.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+      <script src="{{site.baseurl}}/assets/js/theme.js"></script>
+      <script src="{{site.baseurl}}/assets/js/lunr.js"></script>
+      
+      {% include tracking-footer.html %}
+      
     <script>anchors.add('h3, h4, h5, h6');</script>
   </body>
 </html>
