--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,10 +4,16 @@
     <a class="nav-link active" href="{{site.baseurl}}/">Inicio</a>
 </li> -->
 <li class="nav-item">
-    <a class="nav-link active" href="{{site.baseurl}}/">home <small>this part of cimarron.io</small></a>
+    <a class="nav-link" href="{{site.homeurl}}">home</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/categories">categories</a>
+    <a class="nav-link" href="{{site.baseurl}}/categories">datasettes categories</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="https://til.cimarron.io/">TIL</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link active" href="{{site.baseurl}}/">datasettes</a>
 </li>
 <li class="nav-item">
     <a class="nav-link" target="_blank" href="https://github.com/chekos/"><i class="fab fa-github fa-2x"></i></a>
