updates and typos

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -6,7 +6,7 @@ layout: default
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <h1>things i've learned about: <span style="text-decoration: underline dotted;">{{page.title}}</span></h1>
+                    <h1>datasettes about: <span style="text-decoration: underline dotted;">{{page.title}}</span></h1>
                 </div>
                 <div class="col-lg-4">
                 </div>
