--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
     
     {% seo %}
     
-    <link rel="shortcut icon" type="image/x-icon" href="{{site.baseurl}}{{site.favicon}}">
+    <link rel="shortcut icon" type="image/x-icon" href="/{{site.favicon}}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{site.baseurl}}assets/css/bootstrap.css">
-    <link rel="stylesheet" href="{{site.baseurl}}assets/css/theme.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.css">
+    <link rel="stylesheet" href="/assets/css/theme.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     
     {% include tracking-header.html %}
@@ -21,7 +21,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-      <a class="navbar-brand font-weight-bolder mr-3" href="{{site.homeurl}}"><img src="{{site.baseurl}}{{site.logo}}" height="50"> &nbsp;<strong>Cimarrón IO</strong></a>
+      <a class="navbar-brand font-weight-bolder mr-3" href="{{site.homeurl}}"><img src="/{{site.logo}}" height="50"> &nbsp;<strong>Cimarrón IO</strong></a>
       <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
@@ -56,8 +56,8 @@
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-      <script src="{{site.baseurl}}assets/js/theme.js"></script>
-      <script src="{{site.baseurl}}assets/js/lunr.js"></script>
+      <script src="/assets/js/theme.js"></script>
+      <script src="/assets/js/lunr.js"></script>
       
       {% include tracking-footer.html %}
   </body>
