--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -7,10 +7,7 @@
     <a class="nav-link" href="{{site.homeurl}}">home</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/categories">datasettes categories</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="https://til.cimarron.io/">TIL</a>
+    <a class="nav-link" href="{{site.baseurl}}categories">datasettes categories</a>
 </li>
 <li class="nav-item">
     <a class="nav-link active" href="{{site.baseurl}}/">datasettes</a>
